--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ about:
 
 ## Education
 
-I am an undergraduate student at Duke University, pursuing a Bachelor's of Science in Statistics and Computer Science, with a Minor in Math (3.86 GPA) [transcript](docs/PDF_Files/unofficialtranscript2023.pdf).
+I am currently a junior at Jericho High School, with a courseload and extracurricular activities centered around programming and engineering in business (4.00 unweighted GPA, 4.25 weighted GPA) [transcript](images/Transcript.pdf).
 
 ## Research Interests
 
