--- a/projects.qmd
+++ b/projects.qmd
@@ -4,7 +4,7 @@ title: "Projects"
 
 ### FarmBot Genesis
 
-In the process of constructing and programming an automated farming robot for my high school. Product details can be viewed [here](https://farm.bot/pages/genesis).
+In the process of constructing and programming an advanced automated farming robot for my high school. Product details can be viewed [here](https://farm.bot/pages/genesis).
 
 
 ------------------------------------------------------------------------
