--- a/research.qmd
+++ b/research.qmd
@@ -12,9 +12,9 @@ title: "Research"
 
 [![Presentation](images/SIBMIPres.png)](docs/PDF_Files/SIBMI_Final_Presentation.pdf)
 
-#### A video I made regarding Medical Domain Contrastive Learning can be seen below
+#### A interview I did for Fox 5 News on Generative AI in schools
 
-{{< video https://youtu.be/qEqeYpuUfKw title='Contrastiv Learning in Medical Domain' >}}
+{{< video https://youtu.be/mhLxliGMASE?si=wwRezig4vFBRnQDt&t=79 title='Some schools embracing artificial intelligence to help teach' >}} 
 
 ------------------------------------------------------------------------
 
