research.qmd chang

--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ about:
 
 ## Education
 
-I am currently a junior at Jericho High School, with a course load and extracurricular activities centered around programming and engineering in business (4.00 unweighted GPA, 4.25 weighted GPA) [transcript](images/Transcript.pdf).
+I am currently a junior at Jericho High School, with courses and extracurricular activities centered around programming and engineering in business (4.00 unweighted GPA, 4.25 weighted GPA) [transcript](images/Transcript.pdf).
 
 ## Research Interests
 
